--- a/vector/src/main/res/xml/vector_settings_preferences.xml
+++ b/vector/src/main/res/xml/vector_settings_preferences.xml
@@ -28,6 +28,11 @@
             android:persistent="false"
             android:title="@string/font_size" />
 
+
+        <im.vector.app.core.preference.LayoutPreference
+            android:key="SETTINGS_LAYOUT_MODE"
+            android:persistent="false" />
+
     </im.vector.app.core.preference.VectorPreferenceCategory>
 
     <im.vector.app.core.preference.VectorPreferenceCategory android:title="@string/spaces">
@@ -35,8 +40,8 @@
         <im.vector.app.core.preference.VectorSwitchPreference
             android:defaultValue="false"
             android:key="SETTINGS_PREF_SPACE_SHOW_ALL_ROOM_IN_HOME"
-            android:title="@string/preference_show_all_rooms_in_home"
-            android:summary="@string/all_rooms_youre_in_will_be_shown_in_home" />
+            android:summary="@string/all_rooms_youre_in_will_be_shown_in_home"
+            android:title="@string/preference_show_all_rooms_in_home" />
 
     </im.vector.app.core.preference.VectorPreferenceCategory>
 
